--- a/Clash/Node/Latest.yaml
+++ b/Clash/Node/Latest.yaml
@@ -685,7 +685,7 @@ proxy-groups:
       - 🇮🇱𖤛⟪@LonUp_M⟫𖤛321
       - 🇺🇸𖤛⟪@LonUp_M⟫𖤛322
       - 🇯🇵𖤛⟪@LonUp_M⟫𖤛323
-      - ⟪@LonUp_M⟫𖤛324
+      - 🆔𖤛⟪@LuxyNet⟫𖤛324
       - 🇺🇸𖤛⟪@LonUp_M⟫𖤛325
       - 🇫🇷𖤛⟪@LonUp_M⟫𖤛326
       - 🇫🇷𖤛⟪@LonUp_M⟫𖤛327
@@ -1130,7 +1130,7 @@ proxy-groups:
       - 🇮🇱𖤛⟪@LonUp_M⟫𖤛321
       - 🇺🇸𖤛⟪@LonUp_M⟫𖤛322
       - 🇯🇵𖤛⟪@LonUp_M⟫𖤛323
-      - ⟪@LuxyNet⟫𖤛324
+      - 🆔𖤛⟪@LuxyNet⟫𖤛324
       - 🇺🇸𖤛⟪@LonUp_M⟫𖤛325
       - 🇫🇷𖤛⟪@LonUp_M⟫𖤛326
       - 🇫🇷𖤛⟪@LonUp_M⟫𖤛327
