--- a/Clash/Node/Latest.yaml
+++ b/Clash/Node/Latest.yaml
@@ -1,6 +1,7 @@
 #-------------------------------------------------------------#
-#             Telegram Channel:@LONUP_M
+#               Telegram Channel:@LONUP_M
 #           خرید اشتراک ویژه پرسرعت و بدون قطی:@LuxyNet
+#            ربات خرید و تسست رایگان: @LuxyNetBot
 #-------------------------------------------------------------#
 mixed-port: 6985
 external-controller: 127.0.0.1:9090
